# eigen

./: .gitignore  CMakeLists.txt  README.md  eigen.cpp  model-tank1-noWater-mar2023.gdml  model.gdml  run.mac  settings.mac  vis.mac
include/: Analysis.h  CrossCatcher.h  MyActionInitialization.h  MyConstruction.h  MyEventAction.h  MyHist.h  MyHist2D.h  MyHistManager.h  MyParallelWorld.h  MyPrimaryGeneratorAction.h  MyRunAction.h  MyRunActionMaster.h  MySensDet.h  MySteppingAction.h  StateManager.h  Utils.h  XSFileData.h  safe_ptr.h
src/: Analysis.cpp  CrossCatcher.cpp  MyActionInitialization.cpp  MyConstruction.cpp  MyEventAction.cpp  MyHist.cpp  MyHist2D.cpp  MyHistManager.cpp  MyParallelWorld.cpp  MyPrimaryGeneratorAction.cpp  MyRunAction.cpp  MyRunActionMaster.cpp  MySensDet.cpp  MySteppingAction.cpp  StateManager.cpp  Utils.cpp  XSFileData.cpp
